<resources>
    <string name="app_name">Allen GeniSys Remote</string>
    <string name="title_home">Home</string>
    <string name="hymn_title_label">Hymn Title</string>
    <string name="hymn_vol_label">Volume:</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="title_hymn">Hymn Player</string>
    <string name="title_perf">Performance</string>
    <string name="title_rec">Recorder</string>
    <string name="title_player">Player</string>
    <string name="title_activity_rename">RenameActivity</string>
    <string name="rename_song">Rename Song</string>
    <string name="recording">Recording</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
