<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_hymn"
        android:icon="@drawable/hymn"
        android:title="@string/title_hymn" />

    <item
        android:id="@+id/navigation_performance"
        android:icon="@drawable/treble"
        android:title="@string/title_perf" />

    <item
        android:id="@+id/navigation_recording"
        android:icon="@drawable/microphone"
        android:title="@string/title_rec" />

    <item
        android:id="@+id/navigation_player"
        android:icon="@drawable/player"
        android:title="@string/title_player" />

</menu>
